# ble_temperature

./: Cargo.toml  Embed.toml  README.md  memory.x
.cargo/: config.toml
nordic_softdevice/: erase_and_flash.sh
src/: main.rs
